--- a/intelligen_logistics/supply_chain_RFM.ipynb
+++ b/intelligen_logistics/supply_chain_RFM.ipynb
@@ -641,28 +641,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order date (DateOrders)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Customer Id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>792 days 01:42:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>136 days 08:56:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>229 days 22:38:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>380 days 05:47:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>457 days 23:22:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20753</th>\n",
+       "      <td>0 days 01:46:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20754</th>\n",
+       "      <td>0 days 01:25:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20755</th>\n",
+       "      <td>0 days 01:04:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20756</th>\n",
+       "      <td>0 days 00:43:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20757</th>\n",
+       "      <td>0 days 00:22:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20652 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Customer Id\n",
-       "1       2015-12-01 22:18:00\n",
-       "2       2017-09-17 15:04:00\n",
-       "3       2017-06-16 01:22:00\n",
-       "4       2017-01-16 18:13:00\n",
-       "5       2016-10-31 00:38:00\n",
-       "                ...        \n",
-       "20753   2018-01-31 22:14:00\n",
-       "20754   2018-01-31 22:35:00\n",
-       "20755   2018-01-31 22:56:00\n",
-       "20756   2018-01-31 23:17:00\n",
-       "20757   2018-01-31 23:38:00\n",
-       "Name: order date (DateOrders), Length: 20652, dtype: datetime64[ns]"
+       "            order date (DateOrders)\n",
+       "Customer Id                        \n",
+       "1                 792 days 01:42:00\n",
+       "2                 136 days 08:56:00\n",
+       "3                 229 days 22:38:00\n",
+       "4                 380 days 05:47:00\n",
+       "5                 457 days 23:22:00\n",
+       "...                             ...\n",
+       "20753               0 days 01:46:00\n",
+       "20754               0 days 01:25:00\n",
+       "20755               0 days 01:04:00\n",
+       "20756               0 days 00:43:00\n",
+       "20757               0 days 00:22:00\n",
+       "\n",
+       "[20652 rows x 1 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +748,7 @@
    "source": [
     "import datetime\n",
     "present = datetime.datetime(2018,2,1)\n",
-    "supply_chain_data.groupby(['Customer Id']).agg({'order date (DateOrders)':lambda x: x})"
+    "supply_chain_data.groupby(['Customer Id']).agg({'order date (DateOrders)':lambda x: present-x.max()})"
    ]
   },
   {
