--- a/intelligen_logistics/lesson1/supply_chain_RFM.ipynb
+++ b/intelligen_logistics/lesson1/supply_chain_RFM.ipynb
@@ -1241,6 +1241,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Type', 'Days for shipping (real)', 'Days for shipment (scheduled)',\n",
+       "       'Benefit per order', 'Sales per customer', 'Delivery Status',\n",
+       "       'Late_delivery_risk', 'Category Id', 'Category Name', 'Customer City',\n",
+       "       'Customer Country', 'Customer Email', 'Customer Fname', 'Customer Id',\n",
+       "       'Customer Lname', 'Customer Password', 'Customer Segment',\n",
+       "       'Customer State', 'Customer Street', 'Customer Zipcode',\n",
+       "       'Department Id', 'Department Name', 'Latitude', 'Longitude', 'Market',\n",
+       "       'Order City', 'Order Country', 'Order Customer Id',\n",
+       "       'order date (DateOrders)', 'Order Id', 'Order Item Cardprod Id',\n",
+       "       'Order Item Discount', 'Order Item Discount Rate', 'Order Item Id',\n",
+       "       'Order Item Product Price', 'Order Item Profit Ratio',\n",
+       "       'Order Item Quantity', 'Sales', 'Order Item Total',\n",
+       "       'Order Profit Per Order', 'Order Region', 'Order State', 'Order Status',\n",
+       "       'Order Zipcode', 'Product Card Id', 'Product Category Id',\n",
+       "       'Product Description', 'Product Image', 'Product Name', 'Product Price',\n",
+       "       'Product Status', 'shipping date (DateOrders)', 'Shipping Mode',\n",
+       "       'order_year', 'order_month', 'order_week_day', 'order_hour',\n",
+       "       'order_month_year', 'TotalPrice'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "supply_chain_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('supply_chain_data.pkl','wb') as file:\n",
+    "    pickle.dump(supply_chain_data,file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
