处理下bad为0的时候的异常值

--- a/intelligen_logistics/lesson3/woe_vi.ipynb
+++ b/intelligen_logistics/lesson3/woe_vi.ipynb
@@ -963,6 +963,7 @@
     "    #print(df_woe)\n",
     "    df_woe['good_rate'] = (df_woe['all'] - df_woe['bad'])/(df_woe['all'].sum() - df_woe['bad'].sum())\n",
     "    df_woe['bad_rate'] = df_woe['bad']/df_woe['bad'].sum()\n",
+    "    df_woe.loc[df_woe['bad_rate']== 0, 'bad_rate'] = 0.00001\n",
     "    df_woe[feature+'_WOE'] = np.log(df_woe['bad_rate']/df_woe['good_rate'])\n",
     "    df =df.merge(df_woe[[feature, feature+'_WOE']], on=feature, how='left')\n",
     "    print(df_woe)\n",
