--- a/intelligen_logistics/lesson6/santa.ipynb
+++ b/intelligen_logistics/lesson6/santa.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,33 +419,326 @@
     "        for j in DESIRED[i,:]:\n",
     "            candidates[j].append(i)\n",
     "            #定义变量，x[i,j]第i个家庭，第j天是否参加\n",
-    "            x[i,j] = solver.BoolVar('x[%i,%i]', %(i,j))\n",
-    "    #每天人数125-300\n",
-    "    daliy_occupancy = [solver.Sum(x[i,j] * FAMILY_SIZE[i] for i in candidates[j] for j in range(N_DAYS))]\n",
-    "    print(candidates)\n",
+    "            x[i,j] = solver.BoolVar('x[%i,%i]'%(i,j))\n",
+    "    print(len(x))\n",
+    "    #每天人数125-300，统计每天的人数\n",
+    "    daliy_occupancy = [solver.Sum([x[i,j] * FAMILY_SIZE[i] for i in candidates[j]]) for j in range(N_DAYS)]\n",
+    "    #家庭在10选择中出现的次数\n",
+    "    famliy_presence = [solver.Sum([x[i,j] for j in DESIRED[i,:]]) for i in range(N_FAMILY)]\n",
+    "    \n",
+    "    #目标函数\n",
+    "    preference_cost = solver.Sum([pcost_mat[i,j] *x[i,j] for i in range(N_FAMILY) for j in DESIRED[i,:]])\n",
+    "    solver.Minimize(preference_cost)\n",
+    "    #设置约束条件\n",
+    "    #当天出现人数不超过前一天25\n",
+    "    for j in range(N_DAYS-1):\n",
+    "        solver.Add(daliy_occupancy[j] - daliy_occupancy[j+1] <=25)\n",
+    "        solver.Add(daliy_occupancy[j+1] - daliy_occupancy[j] <=25)\n",
+    "        \n",
+    "    for i in range(N_FAMILY):\n",
+    "        solver.Add(famliy_presence[i] == 1)\n",
+    "    for j in range(N_DAYS):\n",
+    "        solver.Add(daliy_occupancy[j] >= MIN_OCCUPANCY)\n",
+    "        solver.Add(daliy_occupancy[j] <= MAX_OCCUPANCY)\n",
+    "    result = solver.Solve()\n",
+    "    temp = [(i,j,x[i,j].solution_value()) for i in range(N_FAMILY) for j in DESIRED[i,:] if x[i,j].solution_value() >0]\n",
+    "    df = pd.DataFrame(temp, columns=['family_id', 'day','result'])\n",
+    "    return df\n",
+    "    #print(daliy_occupancy)\n",
+    "    #print(candidates)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'candidates' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-113-6c5833f3be7d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcandidates\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'candidates' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50000\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>family_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5068</td>\n",
+       "      <td>4995</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5069</td>\n",
+       "      <td>4996</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5070</td>\n",
+       "      <td>4997</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5071</td>\n",
+       "      <td>4998</td>\n",
+       "      <td>91</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5072</td>\n",
+       "      <td>4999</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5073 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      family_id  day  result\n",
+       "0             0   51     1.0\n",
+       "1             1   25     1.0\n",
+       "2             2   99     1.0\n",
+       "3             3    1     1.0\n",
+       "4             4   52     1.0\n",
+       "...         ...  ...     ...\n",
+       "5068       4995   15     1.0\n",
+       "5069       4996   87     1.0\n",
+       "5070       4997   31     1.0\n",
+       "5071       4998   91     1.0\n",
+       "5072       4999   12     1.0\n",
+       "\n",
+       "[5073 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "candidates.shape()"
+    "%%time\n",
+    "result = solveLP()\n",
+    "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>family_id</th>\n",
+       "      <th>day</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>59</td>\n",
+       "      <td>59</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60</td>\n",
+       "      <td>59</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>241</td>\n",
+       "      <td>240</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>242</td>\n",
+       "      <td>240</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>264</td>\n",
+       "      <td>262</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4983</td>\n",
+       "      <td>4912</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4985</td>\n",
+       "      <td>4914</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4986</td>\n",
+       "      <td>4914</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5033</td>\n",
+       "      <td>4961</td>\n",
+       "      <td>53</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5034</td>\n",
+       "      <td>4961</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>146 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      family_id  day  result\n",
+       "59           59   38    0.25\n",
+       "60           59   14    0.75\n",
+       "241         240   32    0.75\n",
+       "242         240   56    0.25\n",
+       "264         262   31    0.50\n",
+       "...         ...  ...     ...\n",
+       "4983       4912    8    0.40\n",
+       "4985       4914   38    0.60\n",
+       "4986       4914   43    0.40\n",
+       "5033       4961   53    0.75\n",
+       "5034       4961   15    0.25\n",
+       "\n",
+       "[146 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = result['family_id'].value_counts()\n",
+    "print(len(temp[temp > 1]))\n",
+    "result['result'].value_counts()\n",
+    "result[result['family_id'].isin(temp[temp > 1].index)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "线性规划虽然设置参数为bool型，但是从result值中可以看到并不是0和1两个，而是很多小数，类似概率，所以result的family_id有重复"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
